--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-p {
-	color: black;
-	font-size: 20px;
-	padding: 10px; 
-	background-color: gray; 
-	border: 2px solid white;
-}
-h1 {
-	color: black;
-	font-size: 40px;
-	padding; 10px;
-	background-color: orange; 
-	border: 2px solid white;
-}
+<!doctype html>
+<html>
+	<head>
+		<title> Roseville Runners </title>
+		<link href="style.css" rel="stylesheet" type="text/css"/>
+	</head>
+
+	<body>
+		<h1>
+			This is page 2
+		</h1>
+		<a href="index.html">Home</a>
+	</body>
+
+
+
+</html>
